[workspace]
members = ["crates/*", "xtask"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
# third party
anyhow = "1.0.79"
better-panic = "0.3.0"
drop_bomb = "0.1.5"
env_logger = "0.11.1"
flate2 = "1.0.28"
la-arena = "0.3.1"
log = "0.4.20"
lsp-server = "0.7.6"
lsp-types = "0.95.0"
pico-args = "0.5.0"
pretty_assertions = "1.4.0"
proc-macro2 = "1.0.70"
quote = "1.0.33"
rayon = "1.8.1"
rowan = "0.15.15"
rustc-hash = "1.1.0"
serde_json = "1.0.108"
text-size = "1.1.1"
walkdir = "2.4.0"
# language util
code-h2-md-map.git = "https://github.com/azdavis/language-util.git"
event-parse.git = "https://github.com/azdavis/language-util.git"
panic-hook.git = "https://github.com/azdavis/language-util.git"
paths.git = "https://github.com/azdavis/language-util.git"
str-process.git = "https://github.com/azdavis/language-util.git"
syntax-gen.git = "https://github.com/azdavis/language-util.git"
text-pos.git = "https://github.com/azdavis/language-util.git"
token.git = "https://github.com/azdavis/language-util.git"
write-rs-tokens.git = "https://github.com/azdavis/language-util.git"

[workspace.lints.rust]
missing_debug_implementations = "deny"
missing_docs = "deny"
rust_2018_idioms = "deny"
[workspace.lints.clippy]
pedantic = "deny"
