[workspace]
members = ["crates/*", "xtask"]
resolver = "3"

[workspace.package]
version = "0.9.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
# third party
anyhow = "1.0.79"
better-panic = "0.3.0"
drop_bomb = "0.1.5"
env_logger = "0.11.1"
flate2 = "1.0.28"
indoc = "2"
la-arena = "0.3.1"
log = "0.4.20"
lsp-server = "0.7.6"
lsp-types = "0.95.0" # stuck on this one until the url story is better https://github.com/gluon-lang/lsp-types/issues/284
pico-args = "0.5.0"
pretty_assertions = "1.4.0"
proc-macro2 = "1.0.70"
pulldown-cmark = "0.12.2"
quote = "1.0.33"
rayon = "1.10.0"
rowan = "0.16.1"
rustc-hash = "2.1.0"
serde_json = "1.0.108"
strsim = "0.11.1"
text-size = "1.1.1"
# language util
always.git = "https://github.com/azdavis/language-util.git"
apply-changes.git = "https://github.com/azdavis/language-util.git"
diagnostic.git = "https://github.com/azdavis/language-util.git"
event-parse.git = "https://github.com/azdavis/language-util.git"
panic-hook.git = "https://github.com/azdavis/language-util.git"
paths.git = "https://github.com/azdavis/language-util.git"
str-process.git = "https://github.com/azdavis/language-util.git"
syntax-gen.git = "https://github.com/azdavis/language-util.git"
text-pos.git = "https://github.com/azdavis/language-util.git"
token.git = "https://github.com/azdavis/language-util.git"
topo-sort.git = "https://github.com/azdavis/language-util.git"
uniq.git = "https://github.com/azdavis/language-util.git"
write-rs-tokens.git = "https://github.com/azdavis/language-util.git"

[workspace.lints.rust]
elided-lifetimes-in-paths = "deny"
explicit-outlives-requirements = "deny"
missing-debug-implementations = "deny"
missing-docs = "deny"
unsafe-code = "deny"
unused-extern-crates = "deny"

[workspace.lints.clippy]
pedantic = "deny"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
