[package]
name = "jsonnet-analyze"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
log.workspace = true
paths.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
text-pos.workspace = true
text-size.workspace = true

always.path = "../always"
diagnostic.path = "../diagnostic"
jsonnet-desugar.path = "../jsonnet-desugar"
jsonnet-escape.path = "../jsonnet-escape"
jsonnet-eval.path = "../jsonnet-eval"
jsonnet-expr.path = "../jsonnet-expr"
jsonnet-lex.path = "../jsonnet-lex"
jsonnet-parse.path = "../jsonnet-parse"
jsonnet-statics.path = "../jsonnet-statics"
jsonnet-syntax.path = "../jsonnet-syntax"

[features]
testing = ["jsonnet-eval/testing"]
