[package]
name = "jsonnet-analyze"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
apply-changes.workspace = true
diagnostic.workspace = true
env_logger.workspace = true
log.workspace = true
paths.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
serde_json.workspace = true
text-pos.workspace = true
text-size.workspace = true
token.workspace = true

always.path = "../always"
jsonnet-ast-escape.path = "../jsonnet-ast-escape"
jsonnet-desugar.path = "../jsonnet-desugar"
jsonnet-escape.path = "../jsonnet-escape"
jsonnet-eval.path = "../jsonnet-eval"
jsonnet-expr.path = "../jsonnet-expr"
jsonnet-ident.path = "../jsonnet-ident"
jsonnet-lex.path = "../jsonnet-lex"
jsonnet-parse.path = "../jsonnet-parse"
jsonnet-resolve-import.path = "../jsonnet-resolve-import"
jsonnet-statics.path = "../jsonnet-statics"
jsonnet-syntax.path = "../jsonnet-syntax"
jsonnet-ty.path = "../jsonnet-ty"
jsonnet-val.path = "../jsonnet-val"
lang-srv-state.path = "../lang-srv-state"
topo-sort.path = "../topo-sort"
