[package]
name = "jsonnet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "jsonnet-cli"
test = false
doctest = false

[dependencies]
paths.workspace = true

jsonnet-analyze.path = "../jsonnet-analyze"
