[package]
name = "jsonnet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "jsonnet-cli"
test = false
doctest = false

[dependencies]
paths.workspace = true
pico-args.workspace = true

always.path = "../always"
jsonnet-analyze.path = "../jsonnet-analyze"
