[package]
name = "jsonnet-desugar"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
paths.workspace = true
rustc-hash.workspace = true
str-process.workspace = true
text-size.workspace = true

always.path = "../always"
finite-float.path = "../finite-float"
jsonnet-ast-escape.path = "../jsonnet-ast-escape"
jsonnet-escape.path = "../jsonnet-escape"
jsonnet-expr.path = "../jsonnet-expr"
jsonnet-syntax.path = "../jsonnet-syntax"
