[package]
name = "jsonnet-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
paths.workspace = true
rustc-hash.workspace = true
serde_json.workspace = true

always.path = "../always"
cycle.path = "../cycle"
finite-float.path = "../finite-float"
jsonnet-expr.path = "../jsonnet-expr"
jsonnet-val.path = "../jsonnet-val"

[build-dependencies]
proc-macro2.workspace = true
quote.workspace = true
write-rs-tokens.workspace = true

jsonnet-std-sig.path = "../jsonnet-std-sig"
