[package]
name = "jsonnet-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
rustc-hash.workspace = true

jsonnet-expr.path = "../jsonnet-expr"
jsonnet-val.path = "../jsonnet-val"
jsonnet-prim.path = "../jsonnet-prim"
