[package]
name = "jsonnet-expr"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
la-arena.workspace = true
paths.workspace = true
rustc-hash.workspace = true

always.path = "../always"

[build-dependencies]
proc-macro2.workspace = true
quote.workspace = true
write-rs-tokens.workspace = true
