[package]
name = "jsonnet-expr"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = true
doctest = false

[dependencies]
always.workspace = true
la-arena.workspace = true
paths.workspace = true
rustc-hash.workspace = true

finite-float.path = "../finite-float"
jsonnet-escape.path = "../jsonnet-escape"
jsonnet-ident.path = "../jsonnet-ident"

[build-dependencies]
proc-macro2.workspace = true
quote.workspace = true
write-rs-tokens.workspace = true

jsonnet-std-sig.path = "../jsonnet-std-sig"
