[package]
name = "jsonnet-lex"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
token.workspace = true

jsonnet-escape.path = "../jsonnet-escape"
jsonnet-syntax.path = "../jsonnet-syntax"
str-process.path = "../str-process"
