[package]
name = "jsonnet-lex"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
str-process.workspace = true
text-size.workspace = true
token.workspace = true

always.path = "../always"
jsonnet-escape.path = "../jsonnet-escape"
jsonnet-syntax.path = "../jsonnet-syntax"
