[package]
name = "jsonnet-lex"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
always.workspace = true
str-process.workspace = true
text-size.workspace = true
token.workspace = true

jsonnet-escape.path = "../jsonnet-escape"
jsonnet-ident.path = "../jsonnet-ident"
jsonnet-syntax.path = "../jsonnet-syntax"
