[package]
name = "jsonnet-ls"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "jsonnet-ls"
test = false
doctest = false

[dependencies]
env_logger.workspace = true
log.workspace = true
paths.workspace = true
serde_json.workspace = true
text-pos.workspace = true

always.path = "../always"
diagnostic.path = "../diagnostic"
jsonnet-analyze.path = "../jsonnet-analyze"
lang-srv-state.path = "../lang-srv-state"
lang-srv.path = "../lang-srv"
