[package]
name = "jsonnet-ls"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "jsonnet-ls"
test = false
doctest = false

[dependencies]
jsonnet-analyze.path = "../jsonnet-analyze"
lang-srv.path = "../lang-srv"
