[package]
name = "jsonnet-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
always.workspace = true
event-parse.workspace = true
text-size.workspace = true
token.workspace = true

jsonnet-syntax.path = "../jsonnet-syntax"
