[package]
name = "jsonnet-prim"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
test = false
doctest = false

[dependencies]
rustc-hash.workspace = true

[build-dependencies]
quote.workspace = true
prettyplease.workspace = true
syn.workspace = true
