[package]
name = "jsonnet-statics"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
paths.workspace = true
rustc-hash.workspace = true
uniq.workspace = true

always.path = "../always"
diagnostic.path = "../diagnostic"
jsonnet-expr.path = "../jsonnet-expr"

[build-dependencies]
proc-macro2.workspace = true
quote.workspace = true
write-rs-tokens.workspace = true
