[package]
name = "jsonnet-statics"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
drop_bomb.workspace = true
log.workspace = true
paths.workspace = true
rustc-hash.workspace = true
strsim.workspace = true
uniq.workspace = true

always.path = "../always"
diagnostic.path = "../diagnostic"
finite-float.path = "../finite-float"
jsonnet-expr.path = "../jsonnet-expr"
jsonnet-ty.path = "../jsonnet-ty"
