[package]
name = "jsonnet-statics"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
always.workspace = true
diagnostic.workspace = true
drop_bomb.workspace = true
log.workspace = true
paths.workspace = true
rustc-hash.workspace = true
strsim.workspace = true

finite-float.path = "../finite-float"
jsonnet-expr.path = "../jsonnet-expr"
jsonnet-format-string.path = "../jsonnet-format-string"
jsonnet-ty.path = "../jsonnet-ty"
