[package]
name = "jsonnet-ty"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
rustc-hash.workspace = true

always.path = "../always"
jsonnet-escape.path = "../jsonnet-escape"
jsonnet-expr.path = "../jsonnet-expr"
jsonnet-ident.path = "../jsonnet-ident"
topo-sort.path = "../topo-sort"

[build-dependencies]
proc-macro2.workspace = true
quote.workspace = true
write-rs-tokens.workspace = true

jsonnet-std-sig.path = "../jsonnet-std-sig"
