[package]
name = "jsonnet-val"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
paths.workspace = true
rustc-hash.workspace = true
serde_json.workspace = true

always.path = "../always"
cycle.path = "../cycle"
finite-float.path = "../finite-float"
jsonnet-escape.path = "../jsonnet-escape"
jsonnet-expr.path = "../jsonnet-expr"
