[package]
name = "jsonnet-val"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
always.workspace = true
paths.workspace = true
rustc-hash.workspace = true
serde_json.workspace = true
uniq.workspace = true

cycle.path = "../cycle"
finite-float.path = "../finite-float"
jsonnet-escape.path = "../jsonnet-escape"
jsonnet-expr.path = "../jsonnet-expr"
