[package]
name = "lang-srv-state"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
apply-changes.workspace = true
paths.workspace = true
serde_json.workspace = true
text-pos.workspace = true

diagnostic.path = "../diagnostic"
