[package]
name = "lang-srv"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
anyhow.workspace = true
walkdir.workspace = true
better-panic.workspace = true
env_logger.workspace = true
log.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
paths.workspace = true
serde_json.workspace = true
