[package]
name = "lang-srv"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
doctest = false

[dependencies]
anyhow.workspace = true
apply-changes.workspace = true
better-panic.workspace = true
log.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
paths.workspace = true
serde_json.workspace = true
text-pos.workspace = true

always.path = "../always"
diagnostic.path = "../diagnostic"
lang-srv-state.path = "../lang-srv-state"
