[package]
name = "tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dev-dependencies]
env_logger.workspace = true
log.workspace = true
paths.workspace = true
pretty_assertions.workspace = true
pulldown-cmark.workspace = true
rustc-hash.workspace = true
serde_json.workspace = true
text-pos.workspace = true

jsonnet-analyze.path = "../jsonnet-analyze"
jsonnet-eval.path = "../jsonnet-eval"
jsonnet-expr.path = "../jsonnet-expr"
jsonnet-std-sig.path = "../jsonnet-std-sig"
jsonnet-token.path = "../jsonnet-token"
jsonnet-ty.path = "../jsonnet-ty"
jsonnet-val.path = "../jsonnet-val"
lang-srv-state.path = "../lang-srv-state"
